<resources>
    <string name="app_name">Nmedia</string>
    <string name="hello">Hello World!</string>
    <string name="avatar">Avatar</string>
    <string name="menuButton">Menu button</string>
    <string name="likesCount">Likes counter</string>
    <string name="shareCounter">Share counter</string>
    <string name="viewsCount">Views count</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="Edit_message">Edit message</string>
    <string name="edit_icon">Edit icon</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add new post</string>
    <string name="play_button">Play button</string>
    <string name="video_preview">Video preview</string>
    <string name="notification_user_liked">%1$s liked your post %2$s</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s published a new post</string>

</resources>